fix []: User profile align-items center

--- a/src/views/UserView/userPage.css
+++ b/src/views/UserView/userPage.css
@@ -3,7 +3,7 @@
 
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   padding: 4rem;
 
